# ptask_tracker

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  build.sh  development.db  docker-compose.dev.yml  main.py  pyproject.toml  requirements.txt  settings.py
handlers/: ping.py
migrations/: env.py
migrations/versions/: 34571491f5d6_add_task_fk_on_user.py  8a81d9e72c7b_add_user_table.py  9e8ba0e6ef4e_initial_migration.py  a4cba52558e3_add_list_categories.py
migrations_async/: env.py
migrations_async/versions/: 3754417fd5b7_add_user_table.py  8233e2513ba8_initial_migration.py  b29a1eca7265_add_list_categories_async.py
schemas/: task.py
src/broker/: consumer.py  producer.py
src/db/: __init__.py  db_depends.py
src/dependencies/: __init__.py  cache.py
src/exceptions/: exceptions.py
src/handlers/: __init__.py  auth.py  category.py  ping.py  tasks.py  user.py
src/models/: __init__.py  task.py  user.py
src/repository/: __init__.py  cache.py  category.py  task.py  user.py
src/schemas/: __init__.py  auth.py  category.py  task.py
src/service/: __init__.py  auth.py  category.py  task.py  user.py
src/service/client/: __init__.py  google.py  mail.py  yandex.py
src/settings/: __init__.py  settings_all.py
tests/: conftest.py
tests/fixtures/: settings.py
tests/fixtures/auth/: auth_service.py  clients.py
tests/fixtures/users/: user_model.py  user_repo.py
tests/unit/auth/: test_auth_service.py
