[tool.poetry]
name = "pomodoro-project"
version = "0.1.0"
description = ""
authors = ["VitaliyDrozdov <vitdrzdv@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^4.1.0"
python-dotenv = "^1.0.1"
fastapi = {extras = ["standard"], version = "^0.115.8"}
pydantic-settings = "^2.8.1"
sqlalchemy = "^2.0.38"
aiosqlite = "^0.21.0"
asyncpg = "^0.30.0"
alembic = "^1.15.1"
aioredis = "^2.0.1"
fastapi-cache2 = "^0.2.2"
redis = "^5.2.1"
redis-cli = "^1.0.1"
python-jose = "^3.4.0"
pytest = {extras = ["async"], version = "^8.3.5"}
pytest-twisted = "^1.14.3"
twisted = "^24.11.0"
pytest-asyncio = "^0.26.0"
jwt = "^1.3.1"
faker = "^37.1.0"
pytest-factoryboy = "^2.7.0"
aio-pika = "^9.5.5"


[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
